2004-12-08  Marco Pesenti Gritti  <marco@gnome.org>

	* src/xdgmimealias.c: (_xdg_mime_alias_list_lookup):
	* src/xdgmimeparent.c: (_xdg_mime_parent_list_lookup):

	Protect against stupid bsearch() implementations.  (#1961,
	Morten Welinder)

2004-12-08  Marco Pesenti Gritti  <marco@gnome.org>

	* src/xdgmimeparent.c: (_xdg_mime_parent_read_from_file):

	Initialize the parent field of the newly allocate list 
	entry.  (#1916, Alex Larsson)

2004-12-08  Marco Pesenti Gritti  <marco@gnome.org>

	* src/xdgmimeglob.c: (_xdg_mime_glob_read_from_file):

	Patch from Matthias Clasen <mclasen@redhat.com> to fix
	a mem leak. Bug #1048

2004-12-08  Marco Pesenti Gritti  <marco@gnome.org>

	* src/xdgmimeglob.h:

	Patch from Michael.Wilson@bull.net to fix compile error on AIX

Sun Nov  7 02:25:21 2004  Jonathan Blandford  <jrb@redhat.com>

	* src/xdgmime.h: Patch from Matthias Clasen <mclasen@redhat.com>
	to add alias and inheritence support.

2004-09-16  Christophe Fergeau  <teuf@gnome.org>

	* src/xdgmimeglob.c: (_xdg_glob_hash_free_nodes):
	* src/xdgmimemagic.c: (_xdg_mime_magic_free): fix memory leaks, 
	  fixes http://bugzilla.gnome.org/show_bug.cgi?id=152771 and
	  http://bugzilla.gnome.org/show_bug.cgi?id=152768

Mon Jul 19 00:23:00 2004  Jonathan Blandford  <jrb@gnome.org>

	* src/xdgmime.c (xdg_mime_register_reload_callback): register a
	callback when we reload MIME data.

	* src/xdgmime.c (xdg_mime_remove_callback): Add capability to
	remove callback.

Sun Jul 18 20:56:22 2004  Jonathan Blandford  <jrb@gnome.org>

	* src/xdgmime.c (xdg_mime_shutdown):
	(xdg_mime_init): reread data when it changes on disk.

Thu May 27 16:18:14 2004  Jonathan Blandford  <jrb@gnome.org>

	* src/xdgmime.h: move xdg_mime_shutdown into the XDG_ENTRY guard.

Thu May 27 15:02:13 2004  Jonathan Blandford  <jrb@gnome.org>

	* src/xdgmimemagic.c (_xdg_mime_magic_read_magic_file): patch from
	Hongli Lai <h.lai@chello.nl> to catch magic files that don't end
	with a '\n'.
