@@ -62,24 +62,26 @@ typedef void (*XdgMimeDestroy)  (void *user_data);
 extern const char *xdg_mime_type_unknown;
 #define XDG_MIME_TYPE_UNKNOWN xdg_mime_type_unknown
 
-const char *xdg_mime_get_mime_type_for_data       (const void *data,
-						   size_t      len);
-const char *xdg_mime_get_mime_type_for_file       (const char *file_name);
-const char *xdg_mime_get_mime_type_from_file_name (const char *file_name);
-int         xdg_mime_is_valid_mime_type           (const char *mime_type);
-int         xdg_mime_mime_type_equal              (const char *mime_a,
-						   const char *mime_b);
-int         xdg_mime_media_type_equal             (const char *mime_a,
-						   const char *mime_b);
-int         xdg_mime_mime_type_subclass           (const char *mime_a,
-						   const char *mime_b);
-int         xdg_mime_get_max_buffer_extents       (void);
-void        xdg_mime_shutdown                     (void);
-void        xdg_mime_dump                         (void);
-int         xdg_mime_register_reload_callback     (XdgMimeCallback  callback,
-						   void            *data,
-						   XdgMimeDestroy   destroy);
-void        xdg_mime_remove_callback              (int              callback_id);
+const char  *xdg_mime_get_mime_type_for_data       (const void *data,
+						    size_t      len);
+const char  *xdg_mime_get_mime_type_for_file       (const char *file_name);
+const char  *xdg_mime_get_mime_type_from_file_name (const char *file_name);
+int          xdg_mime_is_valid_mime_type           (const char *mime_type);
+int          xdg_mime_mime_type_equal              (const char *mime_a,
+						    const char *mime_b);
+int          xdg_mime_media_type_equal             (const char *mime_a,
+						    const char *mime_b);
+int          xdg_mime_mime_type_subclass           (const char *mime_a,
+						    const char *mime_b);
+const char **xdg_mime_get_mime_parents		   (const char *mime);
+const char  *xdg_mime_unalias_mime_type		   (const char *mime);
+int          xdg_mime_get_max_buffer_extents       (void);
+void         xdg_mime_shutdown                     (void);
+void         xdg_mime_dump                         (void);
+int          xdg_mime_register_reload_callback     (XdgMimeCallback  callback,
+						    void            *data,
+						    XdgMimeDestroy   destroy);
+void         xdg_mime_remove_callback              (int              callback_id);
 
 #ifdef __cplusplus
 }
