@@ -1,5 +1,14 @@
 2004-12-08  Marco Pesenti Gritti  <marco@gnome.org>
 
+	* src/xdgmime.c: (xdg_mime_unalias_mime_type),
+	(xdg_mime_mime_type_equal), (xdg_mime_mime_type_subclass),
+	(xdg_mime_get_mime_parents):
+	* src/xdgmime.h:
+
+	Add apis to get parents and to unalias mime type
+
+2004-12-08  Marco Pesenti Gritti  <marco@gnome.org>
+
 	* src/xdgmimealias.c: (_xdg_mime_alias_list_lookup):
 	* src/xdgmimeparent.c: (_xdg_mime_parent_list_lookup):
 
